--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3'
 
 services:
-  frontend:
-    build: ./fe-docker
-    ports: 
-      - "3000:3000"
+  frontend: # Name of our service
+    build: ./frontend # path to dockerfile
+    ports: # Port binding to host from docker container
+      - "3000:3000" # Bind port 3000 of host to 3000 of container
     container_name: frontend-docker
-    restart: always
-    links: 
+    restart: always # What to do if container crashes
+    links:
       - backend
 
   backend:
-    build: ./be-docker
+    build: ./backend
     ports: 
       - "8080:8080"
     container_name: backend-docker
@@ -25,6 +25,3 @@ services:
       - "5432:5432"
     container_name: database-docker
     restart: always
-    
-
-  
